--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Handyman Web</title>
+    <title>Optimal Handyman</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -44,21 +44,21 @@
         <p>OHS Offers a wide range of services to give you a peace of mind.</p>
 
         <div class="row">
-            <div class="services-col">
+            <div class="services-col" id="lawn-services">
                 <h3>Lawn Mowing</h3>
-                <p>We offer lawn mowing services to small, medium, and large homes. We do precise edging of different shape lawns in all terrains. 
+                <p class="service-para">We offer lawn mowing services to small, medium, and large homes. We do precise edging of different shape lawns in all terrains. 
                     We cut grass of any length and texture. We also offer lawn weeding, both hand weeding and herbicide spraying. Our herbicide is organic and pet friendly.
                     When we leave your yard, you will have a transformed and healthy lawn. </p>
             </div>
-            <div class="services-col">
+            <div class="services-col" id="furniture-service">
                 <h3>Furniture Assembly</h3>
-                <p>We offer lawn mowing services to small, medium, and large homes. We do precise edging of different shape lawns in all terrains. 
+                <p class="service-para">We offer lawn mowing services to small, medium, and large homes. We do precise edging of different shape lawns in all terrains. 
                     We cut grass of any length and texture. We also offer lawn weeding, both hand weeding and herbicide spraying. Our herbicide is organic and pet friendly.
                     When we leave your yard, you will have a transformed and healthy lawn. </p>
             </div>
             <div class="services-col">
                 <h3>Rubbish Removal</h3>
-                <p>We offer lawn mowing services to small, medium, and large homes. We do precise edging of different shape lawns in all terrains. 
+                <p class="service-para">We offer lawn mowing services to small, medium, and large homes. We do precise edging of different shape lawns in all terrains. 
                     We cut grass of any length and texture. We also offer lawn weeding, both hand weeding and herbicide spraying. Our herbicide is organic and pet friendly.
                     When we leave your yard, you will have a transformed and healthy lawn. </p>
             </div>
@@ -66,19 +66,19 @@
         <div class="row">
             <div class="services-col">
                 <h3>Lawn Mowing</h3>
-                <p>We offer lawn mowing services to small, medium, and large homes. We do precise edging of different shape lawns in all terrains. 
+                <p class="service-para">We offer lawn mowing services to small, medium, and large homes. We do precise edging of different shape lawns in all terrains. 
                     We cut grass of any length and texture. We also offer lawn weeding, both hand weeding and herbicide spraying. Our herbicide is organic and pet friendly.
                     When we leave your yard, you will have a transformed and healthy lawn. </p>
             </div>
             <div class="services-col">
                 <h3>Furniture Assembly</h3>
-                <p>We offer lawn mowing services to small, medium, and large homes. We do precise edging of different shape lawns in all terrains. 
+                <p class="service-para">We offer lawn mowing services to small, medium, and large homes. We do precise edging of different shape lawns in all terrains. 
                     We cut grass of any length and texture. We also offer lawn weeding, both hand weeding and herbicide spraying. Our herbicide is organic and pet friendly.
                     When we leave your yard, you will have a transformed and healthy lawn. </p>
             </div>
             <div class="services-col">
                 <h3>Rubbish Removal</h3>
-                <p>We offer lawn mowing services to small, medium, and large homes. We do precise edging of different shape lawns in all terrains. 
+                <p class="service-para">We offer lawn mowing services to small, medium, and large homes. We do precise edging of different shape lawns in all terrains. 
                     We cut grass of any length and texture. We also offer lawn weeding, both hand weeding and herbicide spraying. Our herbicide is organic and pet friendly.
                     When we leave your yard, you will have a transformed and healthy lawn. </p>
             </div>
