--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Handyman Web</title>
+    <title>Optimal Handyman</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -49,7 +49,7 @@
 
     <section class="footer">
         <h4> About Us</h4>
-        <p>We are Optimal Handyman Services. Satisfaction Guaranteed</p>
+        <p>We offer Optimal Handyman Services. Satisfaction Guaranteed</p>
         <div class="icons">
         <i class="fa fa-facebook"></i>
         <i class="fa fa-instagram"></i>
