First Hosted version

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.2/css/fontawesome.min.css"> -->
 </head>
 <body>
-    <section class="header">
+    <section class="header" id="serviceheader">
         <nav>
             <a href="index.html"> <img src="images/Logo.jpg"></a>
             <div class = "nav-links" id="navLinks">
@@ -29,10 +29,10 @@
             <i class="fa fa-bars" onclick= "showMenu()" ></i>
         </nav>
 
-    <div class="text-box">
+    <!--<div class="text-box">
         <h1> Contact Us</h1>   
         <p> We cover western sydney surburbs and beyond. T & Cs apply for areas outside Western surburbs</p>
-    </div>
+    </div>-->
 
     </section>
 
@@ -41,6 +41,9 @@
 
     <section class="cta">
         <h1>Contact Us now to get a FREE QUOTE</h1>
+        <h4>Email: optimalhandyservices@gmail.com <br> <!--Link the email to send direct from the web-->
+            Phone: 0412567362  <!--Set up phone number to ring directly when clicked-->
+        </h4>
         <a href="" class="quote-btn"> CONTACT US</a>
 
     </section>
