--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <section class="header">
         <nav>
-            <a href="index.html"> <img src="images/Logo.jpg"></a>
+            <a href="index.html"> <img src="images/Logo.jpg" alt="logo"></a>
             <div class = "nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
@@ -33,7 +33,7 @@
         <h1> Optimal Handyman Services</h1>
         <p>Optimal Handyman Services offers you qaulity jobs at affordable prices. Are you struggling with regular home maintenance or are you stuck with a DIY Project? 
             <br>We will come to your resque just in time and get everything done. </p>
-        <a href="" class="quote-btn">Get a FREE QUOTE</a>    
+        <a href="getquote.html" class="quote-btn">Get a FREE QUOTE</a>    
     </div>
 
     </section>
@@ -51,43 +51,44 @@
                     When we leave your yard, you will have a transformed and healthy lawn. </p>
             </div>
             <div class="services-col" id="furniture-service">
-                <h3>Furniture Assembly</h3>
-                <p class="service-para">We offer lawn mowing services to small, medium, and large homes. We do precise edging of different shape lawns in all terrains. 
-                    We cut grass of any length and texture. We also offer lawn weeding, both hand weeding and herbicide spraying. Our herbicide is organic and pet friendly.
-                    When we leave your yard, you will have a transformed and healthy lawn. </p>
+                <h3>Wall Mounting & Drywall Repair</h3>
+                <p class="service-para">We offer wall mounting services on any type of wall. We do steady, safe, and secure mounting for TVs, Art work, cameras
+                    curtain rods and many more. We locate the services behind the walls prior to mounting to ensure there's no damage and the mounting is safe.
+                     </p>
             </div>
             <div class="services-col">
                 <h3>Rubbish Removal</h3>
-                <p class="service-para">We offer lawn mowing services to small, medium, and large homes. We do precise edging of different shape lawns in all terrains. 
-                    We cut grass of any length and texture. We also offer lawn weeding, both hand weeding and herbicide spraying. Our herbicide is organic and pet friendly.
-                    When we leave your yard, you will have a transformed and healthy lawn. </p>
+                <p class="service-para">We provide rubbish removal services for all kind of non-toxic waste. Majorly general rubbish and green waste. Asbestos and 
+                    liquid waste not included. The waste is disposed safely in accredited waste management facilities. </p>
             </div>
         </div>
         <div class="row">
             <div class="services-col">
-                <h3>Lawn Mowing</h3>
-                <p class="service-para">We offer lawn mowing services to small, medium, and large homes. We do precise edging of different shape lawns in all terrains. 
-                    We cut grass of any length and texture. We also offer lawn weeding, both hand weeding and herbicide spraying. Our herbicide is organic and pet friendly.
-                    When we leave your yard, you will have a transformed and healthy lawn. </p>
-            </div>
+                <h3>Tree Pruning and Hedging</h3>
+                <p class="service-para">the hedges and trees can grow really fast and be hard to keep up with. We offer both one off services to releave you from the 
+                    pressure and regular maintenance to give you peace of mind and maintain a neat and tidy yard. We can also offer green waste removal if the bins are full.
+
+                 </p>
+                </div>
             <div class="services-col">
                 <h3>Furniture Assembly</h3>
-                <p class="service-para">We offer lawn mowing services to small, medium, and large homes. We do precise edging of different shape lawns in all terrains. 
-                    We cut grass of any length and texture. We also offer lawn weeding, both hand weeding and herbicide spraying. Our herbicide is organic and pet friendly.
-                    When we leave your yard, you will have a transformed and healthy lawn. </p>
+                <p class="service-para">We do furniture assembly of all brands you can think of. Just buy it, we will fix it for you.
+                    The assesmbly service are perfectly done with no damage to the furniture. Whether old or new, with or without an instruction
+                    manual, we got the skills and the tools safely assembly your furniture. </p>
             </div>
             <div class="services-col">
-                <h3>Rubbish Removal</h3>
-                <p class="service-para">We offer lawn mowing services to small, medium, and large homes. We do precise edging of different shape lawns in all terrains. 
-                    We cut grass of any length and texture. We also offer lawn weeding, both hand weeding and herbicide spraying. Our herbicide is organic and pet friendly.
-                    When we leave your yard, you will have a transformed and healthy lawn. </p>
+                <h3>All the ODD Jobs</h3>
+                <p class="service-para">Are you stuck with a DIY? or wondering when you will ever get time finish the never ending
+                    home/house maintenance? Optimal Handyman Services can step in with the much needed help to ensure you get the jobs done in good time. Our services 
+                    include consultation and creative problem solving that can get you unstuck.
+                </p>
             </div>
         </div>
     </section>
 
     <!--Testimonials-->
 
-    <section class="testimonials">
+   <!-- <section class="testimonials">
         <h1>What our clients say!</h1>
         <p>Teddy and his team do a professional job.</p>
         <div class="row">
@@ -119,14 +120,17 @@
         </div>
 
 
-    </section>
+    </section> -->
 
 
-    <!----Call To Action--->
+    <!--Call To Action-->
 
     <section class="cta">
         <h1>Contact Us now to get a FREE QUOTE</h1>
-        <a href="" class="quote-btn"> CONTACT US</a>
+        <h4>Email: optimalhandyservices@gmail.com <br>
+            Phone: 0412567362
+        </h4>
+        <a href="getquote.html" class="quote-btn"> CONTACT US</a>
 
     </section>
 
